compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__ascii_as_unicode_escape_sequence.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn y() -> String {\n  \"\\u{79}\"\n}\n"
---
module rec my.``mod``
let y () = begin
    "\u79"
end
