compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__assert_const_concat.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\nconst cute = \"cute\"\nconst cute_bee = cute <> \"bee\"\n\npub fn foo() {\n  cute_bee\n}\n"
---
module rec my.``mod``
[<Literal>]
let private cute = "cute"
let private cute_bee = cute + "bee"
let foo () = begin
    cute_bee
end
