compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__concat.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn go(x, y) {\n  x <> y\n}\n"
---
module rec my.``mod``
let go (x: string) (y: string) = begin
    x + y
end
