compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__concat_function_call.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 371
expression: "\nfn x() {\n  \"\"\n}\n\npub fn go() {\n  x() <> x()\n}\n"
---
module rec my.``mod``
let x(): string = begin
    ""
end
let go(): string = begin
    x  + x 
end
