compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__match_string_prefix.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" <> name -> name\n    _ -> \"Unknown\"\n  }\n}\n"
---
module rec my.``mod``
let go (x: string) = begin
    match x with
    | Gleam__codegen__prefix "Hello, " name ->
        name
    | _ ->
        "Unknown"
end
