compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__match_string_prefix_assignment.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" as greeting <> name -> greeting\n    _ -> \"Unknown\"\n  }\n}\n"
---
module rec my.``mod``

let go (x: string) = begin
    match x with
    | Gleam_codegen_string_parts "Hello, " (greeting, name) ->
        greeting
    | _ ->
        "Unknown"
end
