compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__match_string_prefix_assignment_with_guard.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 192
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" as greeting <> name if name == \"Dude\" -> greeting <> \"Mate\"\n    \"Hello, \" as greeting <> name -> greeting\n    _ -> \"Unknown\"\n  }\n}\n"
---
module rec my.``mod``
let go (x: string): string = begin
    match x with
    | Gleam_codegen_string_parts "Hello, " (greeting, name) when name = "Dude" ->
        greeting + "Mate"
    | Gleam_codegen_string_parts "Hello, " (greeting, name) ->
        greeting
    | _ ->
        "Unknown"
end
