compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__not_unicode_escape_sequence.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 73
expression: "\npub fn not_unicode_escape_sequence() -> String {\n  \"\\\\u{03a9}\"\n}\n"
---
module rec my.``mod``
let not_unicode_escape_sequence (): string = begin
    "\\u{03a9}"
end
